# XRD_Analysis_Toolkit

./: .gitignore  CHANGELOG.md  PROJECT_HEALTH.md  README.md  RELEASE_NOTES_1.0.0.md  THIRD_PARTY_DATA_SOURCES.md  pyproject.toml  run_finder.command  run_finder.sh  run_finder_cli.command  run_finder_cli.sh  setup_env.bat  setup_env.command  setup_env.sh  update_from_github.bat
XRD_Finder/: Entry_96-100-0018.cif  RELEASE_NOTES_0.2.0.md  RELEASE_NOTES_1.0.0.md  RELEASE_NOTES_1.0.1.md  RELEASE_NOTES_1.0.2.md  RELEASE_NOTES_1.0.3.md  RELEASE_NOTES_1.1.0.md  RELEASE_NOTES_1.1.3.md  RELEASE_NOTES_1.1.4.md  app.json  launch_xrd_finder.bat  launch_xrd_finder_silent.vbs  requirements-optional.txt  requirements.txt  run_finder.bat  run_finder.command  run_finder.sh  run_finder_cli.bat  run_finder_cli.command  run_finder_cli.sh  run_finder_silent.vbs
XRD_Finder/xrd_finder/: __init__.py  app.py
scripts/: build_release_archive.py
toolkit/: launch_xrd_finder_preview.command  launch_xrd_finder_preview.ps1  launch_xrd_finder_preview_macos.py  manifest.json  setup_sci_env.bat  setup_xrd_toolkit_env.bat
toolkit/updates/: xrd_finder.json
xrd_manager/: __init__.py  app.py
xrd_manager/apps/: finder_cli.py  finder_gui.py
xrd_manager/core/: __init__.py  base.py  pattern.py  phase.py  project.py  refinement.py  result.py  series.py  structure.py
xrd_manager/events/: __init__.py  event_bus.py  event_types.py
xrd_manager/finder/: __init__.py  service.py
xrd_manager/io/: __init__.py  cif_loader.py  exporters.py  project_io.py  xy_loader.py
xrd_manager/layers/: __init__.py  (+6 more)
(+112 files in other folders)
