[project]
name = "xrd-analysis-toolkit"
version = "1.0.2"
description = "Cross-platform XRD phase finder for powder diffraction search-match workflows."
requires-python = ">=3.11"
dependencies = [
    "gemmi",
    "numpy",
    "pyqtgraph",
    "PySide6",
    "scipy",
]

[project.scripts]
xrd-finder = "xrd_finder.apps.finder_cli:main"
xrd-finder-gui = "xrd_finder.apps.finder_gui:main"

[tool.ruff]
exclude = [
    ".git",
    ".mypy_cache",
    ".pytest_cache",
    ".ruff_cache",
    ".venv",
    "build",
    "dist",
    "XRD_Finder/data",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "XRD_Finder"}

[tool.setuptools.packages.find]
where = ["XRD_Finder"]

